# qt_ros_ws

./: README.md  file_1.txt  file_2.txt  file_3.txt  file_4.txt
install/: local_setup.sh  setup.sh
install/neptune_2_bringup/share/ament_index/resource_index/package_run_dependencies/: neptune_2_bringup
install/neptune_2_bringup/share/ament_index/resource_index/parent_prefix_path/: neptune_2_bringup
install/neptune_2_bringup/share/neptune_2_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/neptune_2_bringup/share/neptune_2_bringup/worlds/: basic_lidar
install/neptune_2_description/share/neptune_2_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/neptune_2_description/share/neptune_2_description/cmake/: neptune_2_descriptionConfig.cmake
install/neptune_2_description/share/neptune_2_description/urdf/: camera.xacro  projector.xacro
log/: latest_build  latest_list
src/neptune_2_bringup/: CMakeLists.txt
src/neptune_2_bringup/launch/: neptune_2_gazebo.launch.xml
src/neptune_2_bringup/src/: cam_cap.cpp  msg_to_pcl2.cpp
src/neptune_2_bringup/worlds/: pool_world (copy).xml
src/neptune_2_description/: CMakeLists.txt
src/neptune_2_description/launch/: display.launch.xml
src/neptune_2_description/rviz/: urdf_config,rviz.rviz
src/neptune_2_description/urdf/: common_properties.xacro  mobile.xacro  neptune_2.urdf.xacro  neptune_2_gazebo.xacro
